--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -3,6 +3,8 @@
     justify-content: center;
     max-width: 1920px;
     width: 100%;
+    background-color: #1C1C21;
+    margin-bottom: 40px;
 }
 .nav {
     max-width: 1280px;
