--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -10,6 +10,6 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    overflow-y: auto;
+    overflow-y: scroll;
     max-height: 50vh;
 }
