--- a/src/components/BurgerIngredients/IngredientsItem/IngredientsItem.module.css
+++ b/src/components/BurgerIngredients/IngredientsItem/IngredientsItem.module.css
@@ -4,6 +4,8 @@
     align-items: center;
     max-width: 284px;
     position: relative;
+    cursor: pointer;
+    box-sizing: border-box;
 }
 .price {
     display: flex;
