--- a/src/components/BurgerIngredients/IngredientsList/IngredientsList.module.css
+++ b/src/components/BurgerIngredients/IngredientsList/IngredientsList.module.css
@@ -1,8 +1,10 @@
 .list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    list-style-type: none;
-    margin: 0 15px;
-    padding: 0;
+    list-style: none;
+    max-width: 600px;
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding: 0 16px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);  
+    gap: 24px;
 }
