--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,17 +1,9 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 2000px;;
-  background-color: #131316;
-  color: white;
-
-}
-
 .content {
   max-width: 1240px;
   margin: auto;
   display: flex;
+  gap: 40px;
   
 }
+
+
