--- a/src/components/BurgerConstructor/BurgerConstractor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstractor.module.css
@@ -1,38 +1,38 @@
 .section {
     max-width: 600px;
-    width: 100%;
+    padding-top: 100px;
+    padding-left: 16px;
 }
-.item {
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  column-gap: 13px;
-  width: 100%;
-}
-.item:first-of-type{
-  margin-top: 0px;
-}
+
 
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 10px;
+  gap: 16px;
+  overflow-y: scroll;
+  max-height: 464px;
+  margin: 0;
+  padding: 0 8px 0 0;
 }
 
 .list {
-  list-style-type: none;
-  max-height: 40vh;
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
   margin: 0;
   padding: 0;
 }
-.total {
+
+
+
+
+.list_hover {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  flex-direction: column;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+  box-shadow: 0px 0px 16px 8px rgba(51, 51, 255, 0.25),
+    0px 0px 8px 8px rgba(51, 51, 255, 0.25);
 }
-.price {
-  display: flex;
-  align-items: center;
-}
+
