--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -7,9 +7,23 @@
 }
 
 .list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+    max-width: 600px;
+    margin-top: 40px;
     overflow-y: scroll;
-    max-height: 50vh;
+    max-height: 716px;
+}
+
+.list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.list::-webkit-scrollbar-track {
+  background-color: #2f2f37;
+  margin-bottom: 51px;
+}
+
+.list::-webkit-scrollbar-thumb {
+  height: 492px;
+  background: #8585ad;
+  border: 3px solid #8585ad;
 }
