--- a/src/components/BurgerIngredients/IngredientsItem/IngredientsItem.module.css
+++ b/src/components/BurgerIngredients/IngredientsItem/IngredientsItem.module.css
@@ -2,15 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 284px;
+    max-width: 272px;
+    min-height: 208px;
     position: relative;
     cursor: pointer;
     box-sizing: border-box;
 }
 .price {
     display: flex;
-    justify-content: center;
+    gap: 8px;
+    align-items: center;
 }
 .heading {
     text-align: center;
+}
+
+.img {
+    padding: 0 16px;
 }
