--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -1,34 +1,50 @@
 .header {
-    display: flex;
-    justify-content: center;
-    max-width: 1920px;
-    width: 100%;
-    background-color: #1C1C21;
-    margin-bottom: 40px;
+  box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
+  0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
+  0px 0px 1px rgba(0, 0, 0, 0.04);
+  background-color: #1C1C21;
+  padding: 16px 0;
+  margin: auto;
+  max-width: 1280px;
 }
+.container {
+ 
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-left: 104px;
+}
+
 .nav {
-    max-width: 1280px;
-    width: 100%;
-}
-.headerList {
-    list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 3fr 2fr;
-    align-items: center;
-    justify-content: stretch;
-    padding: 0;
-    margin: 0;
-}
-.headerItem {
   display: flex;
-  justify-content: center;
+  gap: 8px;
 }
-.headerItem:last-of-type {
-    justify-self: flex-end;
-}
-.headerLink {
+
+.button {
+  padding: 16px 20px;
   text-decoration: none;
-  color: inherit;
   display: flex;
-  align-items: center;  
+  flex: none;
+  gap: 8px;
+  background-color: transparent;
+  cursor: pointer;
+  color: #8585ad;
+  border-radius: 40px;
+}
+
+.button:hover {
+  box-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25),
+    0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
+}
+
+.button_active {
+  color:#f2f2f3;
+}
+
+.button_profile {
+  margin-left: 280px;
 }
