fix all bugs after first rewiev

--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -37,3 +37,8 @@
     min-height: 65px;
     align-items: center;
 }
+
+.container__buttons {
+    display: flex;
+    justify-content: flex-end;
+  }
